<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_bg"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/inflate_header_back_button" />

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="20dp"
        android:text="@string/label_password_creation_hint"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_title_color"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/footer_title_grey" />


        <RelativeLayout
            android:id="@+id/screen_settings_contact_phone1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_settings_lay_click"
            android:tag="1300 768 476">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:padding="15dp"
                android:text="@string/label_password_creation_length"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dp"
            android:background="@color/footer_title_grey" />

        <RelativeLayout
            android:id="@+id/screen_settings_contact_phone2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_settings_lay_click"
            android:tag="0800 884 323">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:padding="15dp"
                android:text="@string/label_password_creation_uppercase"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dp"
            android:background="@color/footer_title_grey" />

        <RelativeLayout
            android:id="@+id/screen_settings_contact_phone3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_settings_lay_click"
            android:tag="+61 412 280 209">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:padding="15dp"
                android:text="@string/label_password_creation_digit"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dp"
            android:background="@color/footer_title_grey" />

        <RelativeLayout
            android:id="@+id/screen_settings_contact_email1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/style_settings_lay_click"
            android:tag="marketing@etranscriptions.com.au">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:padding="15dp"
                android:text="@string/label_password_creation_special_char"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="40dp"
            android:background="@color/footer_title_grey" />


    </LinearLayout>


</LinearLayout>